template-deployment/gwas-template-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gwas-template-service
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gwas-template-service
    spec:
      containers:
      - name: gwas-template-service
        image: ebispot/gwas-template-service:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
            memory: "256Mi"
        ports:
        - name: http
          containerPort: 8000
        volumeMounts:
        - mountPath: "/application/logs"
          name: log
      volumes:
      - name: log
        persistentVolumeClaim:
           claimName: gwas-depo-logs
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: gwas-template-service
  name: gwas-template-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: "application"
    port: 8080
    targetPort: 8000
  selector:
    app: gwas-template-service
