template-deployment/template-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: template-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /template(/|$)(.*)
        backend:
          serviceName: gwas-template-service
          servicePort: 8080
